Fixed not showing video controls on fullscreen in some browsers

--- a/src/seplis/web/static/app/components/player/Player.scss
+++ b/src/seplis/web/static/app/components/player/Player.scss
@@ -1,4 +1,4 @@
-.player {
+#player {
     background-color: #000;
     position: fixed;
     width: 100%;
